--- a/schlattahotellet/css/style.css
+++ b/schlattahotellet/css/style.css
@@ -9,9 +9,12 @@ nav{
     height: var(--navbar-height);
     background-color: var(--main-color);
     display: flex;
-    justify-content: left;
+    justify-content: space-evenly;
     align-items: center;
     padding: 0 40px;
+    position: sticky;
+    top: 0;
+    z-index: 100;
 }
 
 .logo{
@@ -20,8 +23,8 @@ nav{
     text-align: center;
     padding: 20px;
     line-height: 1.1;
-    background-image: url(../img);
     text-shadow: 3px 3px 3px black;
+    margin-left: 40px;
 }
 
 .logo h2{
@@ -38,9 +41,84 @@ nav ul{
     display: flex;
     gap: 100px;
     color: var(--text-color);
-   
-
+    list-style: none; /* remove default list styles */
+    margin: 0; /* remove default margin */
+    padding: 0; /* remove default padding */
+    margin-right: 40px;
 }
 
+nav ul li a{
+    color: var(--text-color);
+    text-decoration: none;
+    position: relative; /* add position relative for pseudo elements */
+}
+
+nav ul li a:hover{
+    color: var(--secondary-color);
+}
+
+nav ul li a::before{
+    content: "";
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: var(--secondary-color);
+    transform: scaleX(0); /* hide the underline */
+    transition: transform 0.3s ease-out; /* add transition effect */
+}
+
+nav ul li a:hover::before{
+    transform: scaleX(1); /* show the underline on hover */
+}
+
+/* Add media query for smaller screens */
+@media (max-width: 768px){
+    nav ul{
+        display: none; /* hide the navigation links */
+        flex-direction: column; /* change to a column layout */
+        position: absolute;
+        top: var(--navbar-height);
+        left: 0;
+        right: 0;
+        background-color: var(--main-color);
+        z-index: 99;
+    }
+
+    nav ul li{
+        width: 100%;
+        text-align: center;
+        padding: 10px 0;
+    }
+
+    nav ul li a{
+        color: var(--text-color);
+    }
+
+    nav ul li a:hover{
+        color: var(--secondary-color);
+    }
+
+    nav .menu-toggle{
+        display: block; /* show the menu toggle button */
+        position: absolute;
+        top: 0;
+        right: 10px;
+        padding: 20px;
+        cursor: pointer;
+        z-index: 999;
+    }
+
+    nav .menu-toggle::before{
+        content: "\f0c9"; /* add hamburger icon */
+        font-family: "Font Awesome 5 Free";
+        font-weight: 900;
+        font-size: 24px;
+    }
+}
+
+
+ 
 
 
