--- a/schlattahotellet/css/style.css
+++ b/schlattahotellet/css/style.css
@@ -158,6 +158,7 @@ nav ul li a:hover::before {
   text-align: center;
   text-decoration: none;
   font-size: 6.25rem;
+  letter-spacing: 0.5rem;
   border-radius: 0.3125rem; 
   transition: background-color 0.3s ease;
 }
@@ -168,12 +169,26 @@ nav ul li a:hover::before {
 
 .button-container {
   text-align: center;
-  margin-top: 1.25rem;
+  margin: 3rem;
+}
+
+.paket-erbjudanden{
+  background-color: rgb(26, 26, 26);
 }
 
 .paket {
   color: var(--text-color);
  text-align: center;  
+}
+
+.paket h1 {
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  letter-spacing: 0.5rem;
+}
+
+.paket h2 {
+  font-size: 1rem;
 }
 
 .paket-container {
@@ -184,11 +199,14 @@ nav ul li a:hover::before {
 
 .paket-card {
   width: 300px;
+  height: 300px;
   margin: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   overflow: hidden;
   position: relative;
+  text-shadow: 0.125rem 0.125rem 0.125rem rgba(0, 0, 0, 0.8);
+  
 }
 
 .paket-card:hover h2 {
@@ -199,6 +217,7 @@ nav ul li a:hover::before {
   width: 100%;
   height: 200px;
   object-fit: cover;
+  opacity: 0.5;
 }
 
 
