--- a/schlattahotellet/css/style.css
+++ b/schlattahotellet/css/style.css
@@ -157,7 +157,7 @@ nav ul li a:hover::before {
   text-transform: uppercase;
   text-align: center;
   text-decoration: none;
-  font-size: 6.25rem;
+  font-size: 4rem;
   letter-spacing: 0.5rem;
   border-radius: 0.3125rem; 
   transition: background-color 0.3s ease;
@@ -174,6 +174,7 @@ nav ul li a:hover::before {
 
 .paket-erbjudanden{
   background-color: rgb(26, 26, 26);
+  margin: 2rem;
 }
 
 .paket {
@@ -221,6 +222,99 @@ nav ul li a:hover::before {
 }
 
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+body{
+  line-height: 1.5;
+  font-family: 'Poppins', sans-serif;
+}
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
+.container{
+  max-width: 1170px;
+  margin:auto;
+}
+.row{
+  display: flex;
+  flex-wrap: wrap;
+}
+ul{
+  list-style: none;
+}
+.footer{
+  background-color: rgb(26, 26, 26);
+    padding: 70px 0;
+}
+.footer-col{
+   width: 25%;
+   padding: 0 15px;
+}
+.footer-col h4{
+  font-size: 18px;
+  color: var(--text-color);
+  text-transform: capitalize;
+  margin-bottom: 35px;
+  font-weight: 500;
+  position: relative;
+}
+.footer-col h4::before{
+  content: '';
+  position: absolute;
+  left:0;
+  bottom: -10px;
+  background-color: var(--secondary-color);
+  height: 2px;
+  box-sizing: border-box;
+  width: 50px;
+}
+.footer-col ul li:not(:last-child){
+  margin-bottom: 10px;
+}
+.footer-col ul li a{
+  font-size: 16px;
+  text-transform: capitalize;
+  color: var(--text-color);
+  text-decoration: none;
+  font-weight: 300;
+  color: #d4d4d4;
+  display: block;
+  transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+  color: var(--secondary-color);
+  padding-left: 8px;
+}
+.footer-col .social-links a{
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  background-color: rgba(255,255,255,0.2);
+  margin:0 10px 10px 0;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: var(--text-color);
+  transition: all 0.5s ease;
+}
+.footer-col .social-links a:hover{
+  color: var(--secondary-color);
+  background-color:rgba(255, 255, 255, 0.415);
+}
+
+/*responsive*/
+@media(max-width: 767px){
+  .footer-col{
+    width: 50%;
+    margin-bottom: 30px;
+}
+}
+@media(max-width: 574px){
+  .footer-col{
+    width: 100%;
+}
+}
 
 
   
