--- a/schlattahotellet/css/style.css
+++ b/schlattahotellet/css/style.css
@@ -338,10 +338,91 @@ ul{
 }
 }
 
+a.active {
+  border-bottom: 2px solid var(--secondary-color);
+  padding-bottom: 4px;
+}
 
-  
-  
+.booking-section {
+  position: relative;
+  height: 600px;
+}
 
+.background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('../img/ralph-ravi-kayden-zSG-kd-L6vw-unsplash\(1\).jpg');
+  background-size: cover;
+  background-position: center;
+  opacity: 0.5;
+}
+  
+.booking-form {
+  background-color: rgba(255, 255, 255, 0);
+  padding: 20px;
+  border-radius: 10px;
+  margin: auto;
+}
+
+.booking-form label {
+  display: inline-block;
+  margin-right: 10px;
+  color: #fff;
+}
+
+.booking-form input,
+.booking-form select {
+  display: inline-block;
+  margin-right: 10px;
+  border-radius: 5px;
+  border: none;
+  padding: 5px;
+  font-size: 16px;
+  color: var(--text-color);
+  background-color: rgba(255, 255, 255, 0);
+}
+
+.booking-form button {
+  background-color: var(--secondary-color);
+  color: var(--text-color);
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.booking-form button:hover {
+  background-color: #f0b300;
+}
+
+.booking-form select {
+  max-width: 100px;
+}
+
+.booking-form select option {
+  color: var(--text-color)
+}
+
+.booking-form button {
+  background-color: #ffcc00;
+  color: var(--text-color);
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 10px;
+  float: right;
+  clear: both;
+}
+
+.booking-form button:hover {
+  background-color: #f0b300;
+}
 
 
 
